coupon edit completed

--- a/templates/customadmin/offermanagement.html
+++ b/templates/customadmin/offermanagement.html
@@ -405,7 +405,7 @@ background-color: #495057; /* Slightly lighter background on hover */
         }
     </script>
     
-    
+    <!--EDIT COUPON-->
     <script>
         function getCookie(name) {
             let cookieValue = null;
