--- a/templates/customadmin/editproduct.html
+++ b/templates/customadmin/editproduct.html
@@ -139,6 +139,22 @@
                     <label for="large_quantity">Large Quantity:</label>
                     <input type="number" id="largequantity" name="largequantity" class="form-control" min="0" required value={{product.large}}>
                 </div>
+
+                <div class="form-group">
+                    <label for="category">Offers:</label>
+                    <select id="off" name="off" class="form-control" required>
+                        <option value="" selected disabled>Select Category</option>
+                        {% for j in offers %}
+                        {%if j.id == product.offer.id%}
+                        <option value="{{j.id}}" selected>{{j.name}}</option>
+                        {%else%}
+                        <option value="{{j.id}}" >{{j.name}}</option>
+                        {%endif%}
+                         {%endfor%}
+                        
+                    </select>
+                </div>
+
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
