--- a/templates/customadmin/products.html
+++ b/templates/customadmin/products.html
@@ -304,6 +304,7 @@
 						<th>S</th>
 						<th>M</th>
 						<th>L</th>
+						<th>offer</th>
 						<th>ACTIONS</th>
 
 						
@@ -320,7 +321,9 @@
                         <td>{{prod.name}}</td>
 						<td>{{prod.category.category_name}}</td>
 						<td>{{prod.description}}</td>
-                        <td>{{prod.price}}</td>
+                        <td>{{prod.price}}
+							{% comment %} {{prod.price-prod.offer.discoun}} {% endcomment %}
+						</td>
 						
 						<td>
 
@@ -338,6 +341,8 @@
 						<td>{{prod.small}}</td>
 						<td>{{prod.medium}}</td>
 						<td>{{prod.large}}</td>
+						<td>{{prod.offer.name}}</td>
+
                         <td>
 							
                         <a href="{% url 'products:product_editpage' prod.id %}" class="btn btn-primary btn-sm">Edit</a>
